crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__top_level_expressions.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"a + b\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..5,
                expr: Op(
                    Op {
                        span: 0..5,
                        op: Add,
                        left: Ident(
                            Ident {
                                span: 0..1,
                                name: "a",
                            },
                        ),
                        right: Ident(
                            Ident {
                                span: 4..5,
                                name: "b",
                            },
                        ),
                    },
                ),
            },
        ],
    },
)
