crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__tuples-2.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let x = [1, 2, 3];\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..18,
                pattern: Ident(
                    BindingIdent {
                        span: 4..5,
                        id: Ident {
                            span: 4..5,
                            name: "x",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Tuple(
                        Tuple {
                            span: 8..17,
                            elems: [
                                ExprOrSpread {
                                    spread: None,
                                    expr: Lit(
                                        Num(
                                            Num {
                                                span: 9..10,
                                                value: "1",
                                            },
                                        ),
                                    ),
                                },
                                ExprOrSpread {
                                    spread: None,
                                    expr: Lit(
                                        Num(
                                            Num {
                                                span: 12..13,
                                                value: "2",
                                            },
                                        ),
                                    ),
                                },
                                ExprOrSpread {
                                    spread: None,
                                    expr: Lit(
                                        Num(
                                            Num {
                                                span: 15..16,
                                                value: "3",
                                            },
                                        ),
                                    ),
                                },
                            ],
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
