crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__type_annotations-4.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let p: Point = {x: 5, y: 10}\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 4..28,
                pattern: Ident(
                    BindingIdent {
                        span: 4..5,
                        id: Ident {
                            span: 4..5,
                            name: "p",
                        },
                    },
                ),
                type_ann: Some(
                    TypeRef(
                        TypeRef {
                            span: 7..12,
                            name: "Point",
                            type_params: None,
                        },
                    ),
                ),
                init: Some(
                    Obj(
                        Obj {
                            span: 15..28,
                            props: [
                                Prop(
                                    KeyValue(
                                        KeyValueProp {
                                            span: 16..20,
                                            name: "x",
                                            value: Lit(
                                                Num(
                                                    Num {
                                                        span: 19..20,
                                                        value: "5",
                                                    },
                                                ),
                                            ),
                                        },
                                    ),
                                ),
                                Prop(
                                    KeyValue(
                                        KeyValueProp {
                                            span: 22..27,
                                            name: "y",
                                            value: Lit(
                                                Num(
                                                    Num {
                                                        span: 25..27,
                                                        value: "10",
                                                    },
                                                ),
                                            ),
                                        },
                                    ),
                                ),
                            ],
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
