crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__type_decls-2.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"type Point = {x: number, y: number}\")"
---
Ok(
    Program {
        body: [
            TypeDecl {
                span: 0..35,
                declare: false,
                id: Ident {
                    span: 5..10,
                    name: "Point",
                },
                type_ann: Object(
                    ObjectType {
                        span: 13..35,
                        props: [
                            TProp {
                                span: 14..23,
                                name: "x",
                                optional: false,
                                mutable: false,
                                type_ann: Prim(
                                    PrimType {
                                        span: 17..23,
                                        prim: Num,
                                    },
                                ),
                            },
                            TProp {
                                span: 25..34,
                                name: "y",
                                optional: false,
                                mutable: false,
                                type_ann: Prim(
                                    PrimType {
                                        span: 28..34,
                                        prim: Num,
                                    },
                                ),
                            },
                        ],
                    },
                ),
                type_params: None,
            },
        ],
    },
)
